<?xml version="1.0" encoding="utf-8"?>
<!-- fragment_form.xml -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/black"
    android:backgroundTintMode="add"
    android:orientation="vertical">

    <!-- Form fields -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:textColor="@color/white"
        android:text="Choose a theme:"/>

    <Spinner
        android:id="@+id/theme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/light_blue_600"
        android:foregroundTint="@color/light_blue_600"
        android:selectAllOnFocus="false"
        android:textColor="@color/white"
        android:theme="@style/Base.Theme.MyCard"
        android:entries="@array/choices" />

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/light_blue_600"
        android:foregroundTint="@color/light_blue_600"
        android:selectAllOnFocus="false"
        android:textColor="@color/white"
        android:theme="@style/Base.Theme.MyCard"
        android:hint="@string/name" />

    <EditText
        android:id="@+id/job"
        android:hint="@string/job_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/light_blue_600"
        android:foregroundTint="@color/light_blue_600"
        android:selectAllOnFocus="false"
        android:textColor="@color/white"
        android:theme="@style/Base.Theme.MyCard"
         />

    <EditText
        android:id="@+id/phone"
        android:hint="@string/phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/light_blue_600"
        android:foregroundTint="@color/light_blue_600"
        android:selectAllOnFocus="false"
        android:textColor="@color/white"
        android:theme="@style/Base.Theme.MyCard"
        />

    <EditText
        android:id="@+id/email"
        android:hint="@string/cardemail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/light_blue_600"
        android:foregroundTint="@color/light_blue_600"
        android:selectAllOnFocus="false"
        android:textColor="@color/white"
        android:theme="@style/Base.Theme.MyCard"
        />

    <EditText
        android:id="@+id/city"
        android:hint="@string/city"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/light_blue_600"
        android:foregroundTint="@color/light_blue_600"
        android:selectAllOnFocus="false"
        android:textColor="@color/white"
        android:theme="@style/Base.Theme.MyCard"
        />

    <EditText
        android:id="@+id/Link1Label"
        android:hint="@string/link_1_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/light_blue_600"
        android:foregroundTint="@color/light_blue_600"
        android:selectAllOnFocus="false"
        android:textColor="@color/white"
        android:theme="@style/Base.Theme.MyCard"
        />

    <EditText
        android:id="@+id/Link1"
        android:hint="@string/https"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/light_blue_600"
        android:foregroundTint="@color/light_blue_600"
        android:selectAllOnFocus="false"
        android:textColor="@color/white"
        android:theme="@style/Base.Theme.MyCard"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:text="@string/optional_links"/>

    <EditText
        android:id="@+id/Link2Label"
        android:hint="@string/link_2_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/light_blue_600"
        android:foregroundTint="@color/light_blue_600"
        android:selectAllOnFocus="false"
        android:textColor="@color/white"
        android:theme="@style/Base.Theme.MyCard"
        />
    <EditText
        android:id="@+id/Link2"
        android:hint="@string/https"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/light_blue_600"
        android:foregroundTint="@color/light_blue_600"
        android:selectAllOnFocus="false"
        android:textColor="@color/white"
        android:theme="@style/Base.Theme.MyCard"
        />

    <EditText
        android:id="@+id/Link3Label"
        android:hint="@string/link_3_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/light_blue_600"
        android:foregroundTint="@color/light_blue_600"
        android:selectAllOnFocus="false"
        android:textColor="@color/white"
        android:theme="@style/Base.Theme.MyCard"
        />
    <EditText
        android:id="@+id/Link3"
        android:hint="@string/https"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/light_blue_600"
        android:foregroundTint="@color/light_blue_600"
        android:selectAllOnFocus="false"
        android:textColor="@color/white"
        android:theme="@style/Base.Theme.MyCard"
        />

    <EditText
        android:id="@+id/Link4Label"
        android:hint="@string/link_4_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/light_blue_600"
        android:foregroundTint="@color/light_blue_600"
        android:selectAllOnFocus="false"
        android:textColor="@color/white"
        android:theme="@style/Base.Theme.MyCard"
        />
    <EditText
        android:id="@+id/Link4"
        android:hint="@string/https"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/light_blue_600"
        android:foregroundTint="@color/light_blue_600"
        android:selectAllOnFocus="false"
        android:textColor="@color/white"
        android:theme="@style/Base.Theme.MyCard"
        />
    <!-- Navigation buttons -->


</LinearLayout>
